--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitbook-plugin-fancybox",
-  "version": "1.0.2",
+  "version": "3.0.0",
   "description": "A gitbook plugin to show image by graceful jQuery fancy box",
   "keywords": [
     "gitbook",
@@ -10,14 +10,14 @@
     "jquery"
   ],
   "engines": {
-    "gitbook": "*"
+    "gitbook": ">=3.0.0-pre.0"
   },
   "author": "LingyuCoder",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^0.19.0",
-    "multiline": "^1.0.2",
-    "underscore": "^1.8.3"
+    "cheerio": "~0.19.0",
+    "multiline": "~1.0.2",
+    "underscore": "~1.8.3"
   },
   "main": "index.js",
   "devDependencies": {},
@@ -26,12 +26,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LingyuCoder/gitbook-plugin-fancybox.git"
+    "url": "https://github.com/ly-tools/gitbook-plugin-fancybox.git"
   },
   "bugs": {
-    "url": "https://github.com/LingyuCoder/gitbook-plugin-fancybox/issues"
+    "url": "https://github.com/ly-tools/gitbook-plugin-fancybox/issues"
   },
-  "homepage": "https://github.com/LingyuCoder/gitbook-plugin-fancybox",
+  "homepage": "https://github.com/ly-tools/gitbook-plugin-fancybox",
   "gitbook": {
     "properties": {
       "helpers": {
